--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog</title>
-</head>
-<body>
-    
-</body>
+    <link href="reset.css" rel="stylesheet" />
+    <link href="output.css" rel="stylesheet" />
+  </head>
+  <body>
+    <navbar>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae debitis
+        nesciunt quas ea pariatur delectus nobis ratione, vel quo, voluptatum ab
+        qui omnis, quis maxime aperiam repudiandae fugiat aut incidunt.
+      </p>
+    </navbar>
+    <article class="flex flex-nowrap">
+      <section>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti
+          nulla quod eum. Nihil, quibusdam id nemo provident dicta reprehenderit
+          odio soluta consectetur cupiditate repellendus ad veritatis quos
+          quasi, voluptatem enim?
+        </p>
+      </section>
+    </article>
+    <aside>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste impedit
+        laudantium culpa libero dicta, repudiandae voluptatem doloremque sunt
+        pariatur at, et voluptatum nemo vitae vero reiciendis. Repellendus
+        officiis dignissimos vel.
+      </p>
+    </aside>
+    <footer></footer>
+  </body>
 </html>
