--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Blog</title>
     <link href="reset.css" rel="stylesheet" />
     <link href="output.css" rel="stylesheet" />
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     <navbar>
@@ -15,7 +16,7 @@
         qui omnis, quis maxime aperiam repudiandae fugiat aut incidunt.
       </p>
     </navbar>
-    <article class="flex flex-nowrap">
+    <article class="flex-row flex-nowrap">
       <section>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti
