confirm that Tailwind is working

--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,15 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <navbar>
+    <navbar class="border-solid border-4 border-indigo-500/100 ">
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae debitis
         nesciunt quas ea pariatur delectus nobis ratione, vel quo, voluptatum ab
         qui omnis, quis maxime aperiam repudiandae fugiat aut incidunt.
       </p>
     </navbar>
-    <article class="flex-row flex-nowrap">
-      <section>
+    <article class="flex-row flex-nowrap border-solid border-4 border-indigo-500/100 ">
+      <section">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti
           nulla quod eum. Nihil, quibusdam id nemo provident dicta reprehenderit
@@ -26,7 +26,7 @@
         </p>
       </section>
     </article>
-    <aside>
+    <aside class="border-solid border-4 border-indigo-500/100 ">
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste impedit
         laudantium culpa libero dicta, repudiandae voluptatem doloremque sunt
@@ -34,6 +34,8 @@
         officiis dignissimos vel.
       </p>
     </aside>
-    <footer></footer>
+    <footer class=" border-solid border-4 border-indigo-500/100 ">
+      <p>Copyright</p>
+    </footer>
   </body>
 </html>
