--- a/public/index.html
+++ b/public/index.html
@@ -9,24 +9,25 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <navbar class="border-solid border-4 border-indigo-500/100 ">
+    <navbar class="border-solid border-4 border-indigo-500/100 border-x-indigo-500">
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae debitis
         nesciunt quas ea pariatur delectus nobis ratione, vel quo, voluptatum ab
         qui omnis, quis maxime aperiam repudiandae fugiat aut incidunt.
       </p>
     </navbar>
-    <article class="flex-row flex-nowrap border-solid border-4 border-indigo-500/100 ">
-      <section">
+    <section class="flex justify-end">
+    <article class="  border-solid border-4 border-indigo-500/100 border-x-indigo-500">
+    
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti
           nulla quod eum. Nihil, quibusdam id nemo provident dicta reprehenderit
           odio soluta consectetur cupiditate repellendus ad veritatis quos
           quasi, voluptatem enim?
         </p>
-      </section>
+     
     </article>
-    <aside class="border-solid border-4 border-indigo-500/100 ">
+    <aside class="border-solid border-4 border-indigo-500/100 border-x-indigo-500">
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste impedit
         laudantium culpa libero dicta, repudiandae voluptatem doloremque sunt
@@ -34,7 +35,8 @@
         officiis dignissimos vel.
       </p>
     </aside>
-    <footer class=" border-solid border-4 border-indigo-500/100 ">
+  </section>
+    <footer class=" border-solid border-4 border-indigo-500/100 border-x-indigo-500">
       <p>Copyright</p>
     </footer>
   </body>
