--- a/public/index.html
+++ b/public/index.html
@@ -9,34 +9,32 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <navbar class="border-solid border-4 border-indigo-500/100 border-x-indigo-500">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae debitis
-        nesciunt quas ea pariatur delectus nobis ratione, vel quo, voluptatum ab
-        qui omnis, quis maxime aperiam repudiandae fugiat aut incidunt.
-      </p>
+    <navbar class=" flex justify-end p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500">
+      <div id="btn">
+        <button type="button" id="login">Login</button>
+        <button type="button" id="register">Register</button>
+      </div>
     </navbar>
     <section class="flex justify-end">
-    <article class="  border-solid border-4 border-indigo-500/100 border-x-indigo-500">
-    
+      <article class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti
           nulla quod eum. Nihil, quibusdam id nemo provident dicta reprehenderit
           odio soluta consectetur cupiditate repellendus ad veritatis quos
           quasi, voluptatem enim?
         </p>
-     
-    </article>
-    <aside class="border-solid border-4 border-indigo-500/100 border-x-indigo-500">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste impedit
-        laudantium culpa libero dicta, repudiandae voluptatem doloremque sunt
-        pariatur at, et voluptatum nemo vitae vero reiciendis. Repellendus
-        officiis dignissimos vel.
-      </p>
-    </aside>
-  </section>
-    <footer class=" border-solid border-4 border-indigo-500/100 border-x-indigo-500">
+      </article>
+      <aside
+        class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste impedit
+          laudantium culpa libero dicta, repudiandae voluptatem doloremque sunt
+          pariatur at, et voluptatum nemo vitae vero reiciendis. Repellendus
+          officiis dignissimos vel.
+        </p>
+      </aside>
+    </section>
+    <footer class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500">
       <p>Copyright</p>
     </footer>
   </body>
