--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <navbar class=" flex justify-end p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500">
+    <navbar class=" flex justify-between items-center p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500">
+      <div class="img">
+      <img src="logo.png" alt="Girl in a jacket" width="150" height="150">
+    </div>
       <div id="btn">
         <button type="button" id="login">Login</button>
         <button type="button" id="register">Register</button>
