--- a/public/index.html
+++ b/public/index.html
@@ -9,17 +9,21 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <navbar class=" flex justify-between items-center p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500">
+    <navbar
+      class="flex justify-between items-center p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-black"
+    >
       <div class="img">
-      <img src="logo.png" alt="Girl in a jacket" width="150" height="150">
-    </div>
+        <img src="logo.png" alt="Girl in a jacket" width="150" height="150" />
+      </div>
       <div id="btn">
         <button type="button" id="login">Login</button>
         <button type="button" id="register">Register</button>
       </div>
     </navbar>
     <section class="flex justify-end">
-      <article class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500">
+      <article
+        class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-red-600"
+      >
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti
           nulla quod eum. Nihil, quibusdam id nemo provident dicta reprehenderit
@@ -28,16 +32,17 @@
         </p>
       </article>
       <aside
-        class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste impedit
-          laudantium culpa libero dicta, repudiandae voluptatem doloremque sunt
-          pariatur at, et voluptatum nemo vitae vero reiciendis. Repellendus
-          officiis dignissimos vel.
-        </p>
+        class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-black"
+      >
+      <a href="url">Blog</a>
+      <a href="url">Blog</a>
+      <a href="url">Blog</a>
+      <a href="url">Blog</a>
       </aside>
     </section>
-    <footer class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500">
+    <footer
+      class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-red-600"
+    >
       <p>Copyright</p>
     </footer>
   </body>
