--- a/public/explore.html
+++ b/public/explore.html
@@ -15,28 +15,23 @@
       <div class="img">
         <img src="logo.png" alt="Girl in a jacket" width="150" height="150" />
       </div>
-      <div id="btn">
-        <button type="button" id="login">Login</button>
-        <button type="button" id="register">Register</button>
+      <div id="btn" class="text-white">
+        <button type="button" id="login" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Login</button>
+        <button type="button" id="register" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Register</button>
       </div>
     </navbar>
-    <section class="flex justify-end">
-      <article
-        class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-red-600"
-      >
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti
-          nulla quod eum. Nihil, quibusdam id nemo provident dicta reprehenderit
-          odio soluta consectetur cupiditate repellendus ad veritatis quos
-          quasi, voluptatem enim?
-        </p>
-      </article>
+    <section class="flex justify-start">
       <aside
-        class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-black"
+      class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-black text-white flex-none "
       >
-      <a href="index.html">Home</a>
-      <a href="explore.html">Explore Blogs</a>
+        <a href="index.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Home</a>
+        <a href="explore.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Explore Blogs</a>
       </aside>
+      <article
+      class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-red-600 flex-auto"
+      >
+        <p>links to various blogs (dynamic Handlebars content)</p>
+      </article>
     </section>
     <footer
       class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-red-600"
