--- a/public/index.html
+++ b/public/index.html
@@ -10,33 +10,33 @@
   </head>
   <body>
     <navbar
-      class="flex justify-between items-center p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-black"
+      class="flex justify-between items-center p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-black "
     >
       <div class="img">
         <img src="logo.png" alt="Girl in a jacket" width="150" height="150" />
       </div>
-      <div id="btn">
-        <button type="button" id="login">Login</button>
-        <button type="button" id="register">Register</button>
+      <div id="btn" class="text-white">
+        <button type="button" id="login" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Login</button>
+        <button type="button" id="register"class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Register</button>
       </div>
     </navbar>
-    <section class="flex justify-end">
-      <article
-        class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-red-600"
+    <section class="flex justify-start">
+      <aside
+        class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-black text-white flex-none "
       >
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti
-          nulla quod eum. Nihil, quibusdam id nemo provident dicta reprehenderit
-          odio soluta consectetur cupiditate repellendus ad veritatis quos
-          quasi, voluptatem enim?
+        <a href="index.html">Home</a>
+        <a href="explore.html">Explore Blogs</a>
+      </aside>
+      <article
+        class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-red-600 flex-auto"
+      >
+        <p>Introduction here. Might contain dynamic Handlebars content</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt qui, minus nihil sequi quasi consectetur cum maiores ducimus optio sint ipsa debitis quam, delectus nostrum corrupti laboriosam odio? Culpa, porro. 
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, voluptatem quibusdam veritatis minus quas eum, nobis illum commodi iste asperiores dolorem! Similique velit laborum odio dolorum beatae quasi mollitia tempore?
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. At beatae eveniet quasi laboriosam numquam cumque quae corrupti perspiciatis iusto laudantium? Minus saepe asperiores soluta error perferendis reiciendis eaque, incidunt nostrum.
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut, necessitatibus aliquam alias ex, cumque quae nihil officiis aperiam labore et nobis! Aspernatur obcaecati facere porro nihil doloremque velit, voluptatibus tenetur?
         </p>
       </article>
-      <aside
-        class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-black"
-      >
-      <a href="index.html">Home</a>
-      <a href="explore.html">Explore Blogs</a>
-      </aside>
     </section>
     <footer
       class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-red-600"
