--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,8 @@
       <aside
         class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-black text-white flex-none "
       >
-        <a href="index.html">Home</a>
-        <a href="explore.html">Explore Blogs</a>
+      <a href="index.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Home</a>
+      <a href="explore.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Explore Blogs</a>
       </aside>
       <article
         class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-red-600 flex-auto"
