--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
         <img src="logo.png" alt="Logo" width="150" height="150" />
       </div>
       <div id="btn" class="text-white">
-        <button type="button" id="login" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Login</button>
-        <button type="button" id="register"class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Register</button>
+        <a href="login.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Login</a>
+        <a href="register.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Register</a>
       </div>
     </navbar>
     <section class="flex justify-start">
