--- a/public/forgot-password.html
+++ b/public/forgot-password.html
@@ -39,7 +39,7 @@
             <button type="submit">Login</button>   
             <input type="checkbox" checked="checked"> Remember me   
             <button type="button" class="cancelbtn"> Cancel</button>   
-            Forgot <a href="forgot-password.html"> password? </a>   
+            Forgot <a href="forgot.html"> password? </a>   
         </div>   
     </form>     
       </article>
