--- a/public/forgot-password.html
+++ b/public/forgot-password.html
@@ -31,7 +31,8 @@
       class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-red-600 flex-auto"
       >
       <form>  
-        <div class="container">   
+        <div class="container"> 
+            <h1>Enter your email</h1>  
             <label>Username : </label>   
             <input type="text" placeholder="Enter Username" name="username" required>  
             <label>Password : </label>   
