--- a/public/register.html
+++ b/public/register.html
@@ -31,7 +31,10 @@
       class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-red-600 flex-auto"
       >
       <form>  
-        <div class="container">   
+        <div class="container">  
+            <h1>Enter your email, username and password to register and start blogging</h1>   
+            <label>Email : </label>   
+            <input type="text" placeholder="Enter Email" name="email" required>  
             <label>Username : </label>   
             <input type="text" placeholder="Enter Username" name="username" required>  
             <label>Password : </label>   
