--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       class="flex justify-between items-center p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-black "
     >
       <div class="img">
-        <img src="logo.png" alt="Logo" width="150" height="150" />
+        <img src="logo.png" alt="logo" width="150" height="150" />
       </div>
       <div id="btn" class="text-white">
         <a href="login.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Login</a>
