--- a/public/forgot-password.html
+++ b/public/forgot-password.html
@@ -33,14 +33,10 @@
       <form>  
         <div class="container"> 
             <h1>Enter your email</h1>  
-            <label>Username : </label>   
-            <input type="text" placeholder="Enter Username" name="username" required>  
-            <label>Password : </label>   
-            <input type="password" placeholder="Enter Password" name="password" required>  
-            <button type="submit">Login</button>   
-            <input type="checkbox" checked="checked"> Remember me   
-            <button type="button" class="cancelbtn"> Cancel</button>   
-            Forgot <a href="forgot.html"> password? </a>   
+            <label>Email : </label>   
+            <input type="text" id="email-recovery" placeholder="Enter Email" name="email" required>   
+            <button type="submit">Send Reset Link</button>   
+            <button type="button" class="cancelbtn"> Cancel</button>     
         </div>   
     </form>     
       </article>
