--- a/public/register.html
+++ b/public/register.html
@@ -34,11 +34,11 @@
         <div class="container">  
             <h1>Enter your email, username and password to register and start blogging</h1>   
             <label>Email : </label>   
-            <input type="text" placeholder="Enter Email" name="email" required>  
+            <input type="text" id="email" placeholder="Enter Email" name="email" required>  
             <label>Username : </label>   
-            <input type="text" placeholder="Enter Username" name="username" required>  
+            <input type="text" id="username" placeholder="Enter Username" name="username" required>  
             <label>Password : </label>   
-            <input type="password" placeholder="Enter Password" name="password" required>  
+            <input type="password" id="password" placeholder="Enter Password" name="password" required>  
             <button type="submit">Login</button>   
             <input type="checkbox" checked="checked"> Remember me   
             <button type="button" class="cancelbtn"> Cancel</button>   
