--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         <a href="register.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Register</a>
       </div>
     </navbar>
-    <section class="flex justify-start">
+    <section class="h-screen flex justify-start">
       <aside
         class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-black text-white flex-none "
       >
