--- a/public/login.html
+++ b/public/login.html
@@ -30,18 +30,18 @@
       <article
       class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-red-600 flex-auto"
       >
-      <form>  
-        <div class="container">   
-            <label>Username : </label>   
-            <input type="text" id="username" placeholder="Enter Username" name="username" required>  
-            <label>Password : </label>   
-            <input type="password" id="password" placeholder="Enter Password" name="password" required>  
-            <button type="submit">Login</button>   
-            <input type="checkbox" checked="checked"> Remember me   
-            <button type="button" class="cancelbtn"> Cancel</button>   
-            Forgot <a href="#"> password? </a>   
-        </div>   
-    </form>     
+      <form action="http://localhost:3001/api/users/login" method="post">
+                <div class="container">   
+                <label>Username : </label>   
+                <input type="text" id="username" placeholder="Enter Username" name="username" required>  
+                <label>Password : </label>   
+                <input type="password" id="password" placeholder="Enter Password" name="password" required>  
+                <input type="submit" value="Login">   
+                <input type="checkbox" checked="checked"> Remember me   
+                <button type="button" class="cancelbtn"> Cancel</button>   
+                Forgot <a href="#"> password? </a>   
+            </div>   
+        </form>
       </article>
     </section>
     <footer
