--- a/public/login.html
+++ b/public/login.html
@@ -31,7 +31,7 @@
       class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-red-600 flex-auto"
       >
       <form>  
-        <div class="container">   
+        <div class="container sm:grid grid-cols-1 md: grid grid-cols-1 lg:grid grid-cols-1 xl:grid grid-cols-1 2xl:grid grid-cols-1">   
             <label>Username : </label>   
             <input type="text" id="username" placeholder="Enter Username" name="username" required>  
             <label>Password : </label>   
@@ -39,7 +39,7 @@
             <button type="submit">Login</button>   
             <input type="checkbox" checked="checked"> Remember me   
             <button type="button" class="cancelbtn"> Cancel</button>   
-            Forgot <a href="#"> password? </a>   
+            <!-- Forgot <a href="#"> password? </a>    -->
         </div>   
     </form>     
       </article>
