--- a/public/register.html
+++ b/public/register.html
@@ -42,7 +42,7 @@
             <button type="submit">Login</button>   
             <input type="checkbox" checked="checked"> Remember me   
             <button type="button" class="cancelbtn"> Cancel</button>   
-            Forgot <a href="forgot-password.html"> password? </a>   
+            <!-- Forgot <a href="forgot-password.html"> password? </a>    -->
         </div>   
     </form>     
       </article>
