--- a/public/login.html
+++ b/public/login.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <navbar
-      class="flex justify-between items-center p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-black"
+      class="flex justify-between items-center p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-black max-sm:p-2 max-sm:flex max-sm:flex-col"
     >
       <div class="img">
         <img src="logo.png" alt="logo" width="150" height="150" />
@@ -20,9 +20,9 @@
         <a href="register.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Register</a>
       </div>
     </navbar>
-    <section class="sm:grid grid-cols-1 h-screen flex justify-start">
+    <section class="h-screen flex justify-start max-sm:flex max-sm:flex-col">
       <aside
-      class=" p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-black text-white flex-none "
+      class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-black text-white max-sm:p-5 lg:p-16"
       >
         <a href="index.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Home</a>
         <a href="explore.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Explore Blogs</a>
@@ -31,7 +31,7 @@
       class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-red-600 flex-auto"
       >
       <form>  
-        <div class="container sm:grid grid-cols-1 md: grid grid-cols-1 lg:grid grid-cols-1 xl:grid grid-cols-1 2xl:grid grid-cols-1">   
+        <div class="container max-sm:flex max-sm:flex-col max-sm:p-5">   
             <label>Username : </label>   
             <input type="text" id="username" placeholder="Enter Username" name="username" required>  
             <label>Password : </label>   
