--- a/public/login.html
+++ b/public/login.html
@@ -20,9 +20,9 @@
         <a href="register.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Register</a>
       </div>
     </navbar>
-    <section class="h-screen flex justify-start max-sm:flex max-sm:flex-col">
+    <section class="h-screen flex flex-col justify-start max-sm:flex max-sm:flex-col max-md:flex max-md:flex-col">
       <aside
-      class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-black text-white max-sm:p-5 lg:p-16"
+      class="p-10 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-black text-white max-sm:p-5 "
       >
         <a href="index.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Home</a>
         <a href="explore.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Explore Blogs</a>
