--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,9 @@
     <footer
       class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-red-600"
     >
-      <p>Copyright</p>
+  
+        &copy; 2023 BeatRouteColumbus. All rights reserved.
+      
     </footer>
   </body>
 </html>
